# capsule-node

./: .env.example  .gitignore  CLAUDE.md  README.md  capsule-node-spec.md
.github/workflows/: ci.yml
daemon/: Cargo.toml
daemon/src/: autolock.rs  config.rs  error.rs  keyring.rs  lib.rs  main.rs  manifest.rs  payload.rs  registry.rs  wallet.rs  watcher.rs
daemon/src/server/: mgmt.rs  mod.rs  public.rs
daemon/tests/: smoke.rs
plugin/: esbuild.config.mjs  eslint.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/src/: capsule-extract.ts  capsule-manager.ts  daemon-bridge.ts  decorator.ts  extraction.test.ts  extraction.ts  frontmatter.test.ts  frontmatter.ts  keyring-modal.ts  main.ts  manifest.ts  preview-modal.ts  settings.ts  view.test.ts  view.ts
scripts/: dev.sh  e2e-test.sh  install-plugin.sh  setup.sh
