[package]
name = "capsuled"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Capsule Node companion daemon"
license = "MIT"
repository = "https://github.com/ryanprice/capsule-node"
readme = "../README.md"

[[bin]]
name = "capsuled"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "net"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
notify = "7.0"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
